DOC: fix openhub.net badge (#378), prevent overflow of sidebar content.

--- a/doc/source/_static/nibabel.css
+++ b/doc/source/_static/nibabel.css
@@ -31,3 +31,8 @@ div.footer {
 div.body {
     background-color: white;
 }
+
+.sphinxsidebarwrapper {
+    /* don't let anything exceed sidebar boundaries */
+    overflow: hidden;
+}
